--- a/roster.html
+++ b/roster.html
@@ -340,6 +340,24 @@ Thu  -  Millie   |LC 0700-0730 (0.5)
 |                                                                          |
 |==========================================================================|
 
+Thu: Bea day off
+|==========================================================================|
+| For week starting    Mon   08/02/2021      DRAFT                         |
+|==========================================================================|
+| Pos   Time           Mon        Tue        Wed        Thu        Fri     |
+|--------------------------------------------------------------------------|
+|==========================================================================|
+|       CP                                                                 |
+| a    0730-1530|      Nere       Nere       Nere       Nere       Nere    |
+| b    0700-1530|8.5   Millie-    Bea-       Millie-    Millie-    Millie  |
+| c    1100-1400|3.0   /          /          Bea^        []^       /       |
+|                                                                          |
+|       LC                                                                 |
+| d    0630-1500|      Mony       Mony       Mony       Mony       Mony    |
+| e    0630-1430|8.0   Sean+      Sean+   Bea^/Lucy*  []^/Lucy*    Bea     |
+|                                                                          |
+|==========================================================================|
+
 <!--
 
 Millie 
